# Sandbox

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
QuadTree/: CMakeLists.txt
QuadTree/QuadTree/: CMakeLists.txt  QuadTree.hpp  QuadTree.tpl  benchmark.cpp  main.cpp
SAT/: CMakeLists.txt
SAT/sat/: CMakeLists.txt  main.cpp
box2DChainTest/: CMakeLists.txt
box2DChainTest/example/: main.cpp
boxTest/: CMakeLists.txt
boxTest/cmake/modules/: FindBOX2D.cmake
boxTest/example/: CMakeLists.txt  main.cpp
polygonInclusion/: CMakeLists.txt
polygonInclusion/polygonInclusion/: CMakeLists.txt  main.cpp
